@@ -24,8 +24,6 @@ Build-Depends: autotools-dev,
                ruby | ruby-interpreter | ruby1.8,
                rubygems-integration (>= 1.6),
                systemtap-sdt-dev [linux-any],
-               tcl8.6-dev,
-               tk8.6-dev,
                zlib1g-dev
 Standards-Version: 3.9.8
 Homepage: http://www.ruby-lang.org/
@@ -98,16 +96,3 @@ Description: Documentation for Ruby 2.4
  straight-forward, and extensible.
  .
  This package contains the autogenerated documentation for Ruby 2.4.
-
-Package: ruby2.4-tcltk
-Architecture: any
-Depends: ${misc:Depends},
-         ${shlibs:Depends}
-Description: Ruby/Tk for Ruby 2.4
- Ruby is the interpreted scripting language for quick and easy
- object-oriented programming.  It has many features to process text
- files and to do system management tasks (as in perl).  It is simple,
- straight-forward, and extensible.
- .
- This package provides Ruby/Tk, Ruby bindings for the Tk graphical user
- interface toolkit.
